# project

./: CMakeLists.txt  main.cpp
Checkers/: checkers.cpp  checkers.h
